--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,13 @@ body {
     font-size: medium;
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
