--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,10 @@
 
 body {
   min-height: 100vh;
-  font-size: small;
+  font-size: medium;
 
   @media screen and (min-width: 1000px) {
-    font-size: medium;
+    font-size: large;
   }
 }
 
